--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -24,6 +24,12 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="Title"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="8dp"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -33,7 +39,9 @@
             android:id="@+id/tv_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:maxLines="10"
+            android:padding="8dp"
+            android:textStyle="normal"
             android:text="Score"
             android:textColor="@color/black"
             android:textSize="14sp" />
@@ -42,9 +50,15 @@
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:text="Date"
-            android:textColor="@color/black"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:scrollHorizontally="true"
+            android:textStyle="normal"
+            android:maxLines="10"
+            android:padding="8dp"
+            android:textColor="@color/gray"
             android:textSize="14sp" />
 
     </LinearLayout>
