--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddScore">
+    tools:context=".AddCase">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -57,14 +57,14 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
     <EditText
-        android:id="@+id/et_score"
+        android:id="@+id/et_case"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="26dp"
         android:ems="10"
         android:inputType="textMultiLine"
         android:gravity="top"
-        android:hint="Start Typing"
+        android:hint="Start Typing ..."
         android:lineSpacingMultiplier="1.8"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
