--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,11 +19,11 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_case_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:text="Title"
+                android:text="Case Title"
                 android:ellipsize="marquee"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:padding="8dp"
@@ -36,13 +36,13 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/tv_score"
+            android:id="@+id/tv_case_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="10"
             android:padding="8dp"
             android:textStyle="normal"
-            android:text="Score"
+            android:text="Case Information"
             android:textColor="@color/black"
             android:textSize="14sp" />
 
