--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,11 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#4A4F51</color>
+    <color name="theme_background">#D1D3D4</color>
 
-    <color name="score_color_1">#FF6263</color>
-    <color name="score_color_2">#23C4ED</color>
-    <color name="score_color_3">#38CC77</color>
-    <color name="score_color_4">#D9D55B</color>
-    <color name="score_color_5">#318BD1</color>
-    <color name="score_color_6">#D345D0</color>
+    <color name="case_color_1">#FF6263</color>
+    <color name="case_color_2">#23C4ED</color>
+    <color name="case_color_3">#38CC77</color>
+    <color name="case_color_4">#D9D55B</color>
+    <color name="case_color_5">#318BD1</color>
+    <color name="case_color_6">#D345D0</color>
 </resources>
