--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
                 android:text="Home"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="36sp"
+                android:textSize="24sp"
+                android:gravity="center"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
