--- a/app/src/main/res/layout/activity_search_case.xml
+++ b/app/src/main/res/layout/activity_search_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".SearchCase">
 
     <SearchView
         android:id="@+id/searchView"
@@ -13,7 +13,7 @@
         android:layout_margin="16dp"
         android:elevation="8dp"
         android:iconifiedByDefault="false"
-        android:queryHint="Search Cases"
+        android:queryHint="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
