--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#4A4F51</color>
     <color name="theme_background">#D1D3D4</color>
+    <color name="underline">#BDB8B8</color>
 
     <color name="case_color_1">#FF6263</color>
     <color name="case_color_2">#23C4ED</color>
