Cleaned the project. Off to bed :D

--- a/app/src/main/res/layout/activity_search_case.xml
+++ b/app/src/main/res/layout/activity_search_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SearchCase">
+    tools:context=".activities.features.search.SearchCase">
 
     <SearchView
         android:id="@+id/searchView"
@@ -15,10 +15,9 @@
         android:iconifiedByDefault="false"
         android:queryHint="Search"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/search_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </SearchView>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_recycler_view"
