--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AddCase">
+    tools:context=".activities.features.insert.AddCase">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
