--- a/app/src/main/res/layout/activity_trash_case.xml
+++ b/app/src/main/res/layout/activity_trash_case.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:id="@+id/trash_drawer"
     android:layout_height="match_parent"
-    tools:context=".activities.TrashCase">
+    tools:context=".activities.features.trash.TrashCase">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
