--- a/app/src/main/res/layout/activity_trash_case.xml
+++ b/app/src/main/res/layout/activity_trash_case.xml
@@ -47,6 +47,18 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/trash_image_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="14dp"
+                    android:padding="8dp"
+                    app:srcCompat="@drawable/baseline_search_24" />
             </RelativeLayout>
 
         </androidx.appcompat.widget.Toolbar>
