--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:id="@+id/drawer"
     android:layout_height="match_parent"
-    tools:context=".activities.features.home.MainActivity">
+    tools:context=".activities.home.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
