--- a/app/src/main/res/layout/activity_search_case.xml
+++ b/app/src/main/res/layout/activity_search_case.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.features.search.SearchCase">
+    tools:context=".activities.home.features.search.SearchCase">
 
     <SearchView
         android:id="@+id/searchView"
