--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,15 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
 
-    <item
-        android:id="@+id/nav_download"
-        android:icon="@drawable/baseline_file_download_24"
-        android:title="Download" />
+
+    <item android:title="Homepage">
+
+        <menu>
+
+            <item
+                android:id="@+id/nav_home"
+                android:icon="@drawable/baseline_home_24"
+                android:title="Home" />
+        </menu>
+    </item>
+
+    <item android:title="Files">
+
+        <menu>
+
+            <item
+                android:id="@+id/nav_download"
+                android:icon="@drawable/baseline_file_download_24"
+                android:title="Download" />
+        </menu>
+    </item>
 
     <item android:title="Miscellaneous">
 
