Slider is doing what it is supposed to. I skipped the Trash aspect of integrating it into Room for right now. Will continue working on the slider and then storing that into the db

--- a/app/src/main/res/layout/activity_add_case.xml
+++ b/app/src/main/res/layout/activity_add_case.xml
@@ -68,8 +68,20 @@
         android:lineSpacingMultiplier="1.8"
         android:background="@null"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/slider_rv"
         app:layout_constraintEnd_toEndOf="@+id/et_title"
         app:layout_constraintStart_toStartOf="@+id/et_title"
         app:layout_constraintTop_toBottomOf="@+id/et_title" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/slider_rv"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:listitem="@layout/slider_list"
+        tools:itemCount="8"
+        app:layout_constraintTop_toBottomOf="@id/et_case"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
